--- a/css/main.css
+++ b/css/main.css
@@ -148,6 +148,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 20rem;
 }
 
 .intro__content {
