--- a/css/main.css
+++ b/css/main.css
@@ -192,6 +192,7 @@ body {
   color: #ffffff;
   text-transform: uppercase;
   margin-top: 7.5rem;
+  margin-bottom: 10rem;
 }
 
 .intro__btn::before {
