--- a/css/main.css
+++ b/css/main.css
@@ -148,7 +148,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;     
+  text-align: center;  
+  padding-top: 20rem;   
 }
 
 
@@ -160,6 +161,7 @@ body {
   text-transform: uppercase;
   line-height: 1.09;
   color: #ffffff;
+  text-align: center;
 }
 
 .intro__subtitle {
@@ -168,6 +170,7 @@ body {
   margin-top: 4rem;
   color: #ffffff;
   line-height: 1.5;
+  text-align: center;
 }
 
 .intro__btn {
