--- a/css/main.css
+++ b/css/main.css
@@ -171,6 +171,7 @@ body {
   color: #ffffff;
   line-height: 1.5;
   text-align: center;
+  margin-bottom: 7.5rem;
 }
 
 .intro__btn {
@@ -194,7 +195,7 @@ body {
   transition: all 0.4s;
   color: #ffffff;
   text-transform: uppercase;
-  margin-top: 7.5rem;
+  margin-bottom: 5rem;
   
 }
 
