--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,8 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;  
-  padding-top: 20rem;   
+  padding-top: 20rem;
+  padding-bottom: 20rem;   
 }
 
 
@@ -195,7 +196,7 @@ body {
   transition: all 0.4s;
   color: #ffffff;
   text-transform: uppercase;
-  margin-bottom: 5rem;
+  
   
 }
 
