--- a/css/main.css
+++ b/css/main.css
@@ -67,11 +67,6 @@ body {
   left: 0;
   width: 100%;
   z-index: 10;
-  padding-top: 4.5rem;
-  padding-right: 4.5rem;
-  padding-left: 4.5rem;
-  background-color: rgba(43, 46, 74, 0.8);
-  
   }
 
 .header__logo {
@@ -83,12 +78,14 @@ body {
   width: 90%;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   align-items: center;
   box-shadow: 0px 1px 0 0 rgba(255, 255, 255, 0.15);
-  padding-bottom: 4.5rem;
+  padding: 3.5rem 0;
 }
 
-.header__nav-link {
+.header__nav-link,
+.header__adapt-nav-link {
   font-size: 1.3rem;
   margin-left: 4.5rem;
   font-family: 'Raleway', sans-serif;
@@ -96,6 +93,14 @@ body {
   text-transform: uppercase;
   color: white;
 }
+
+@media (max-width: 660px) {
+  .header__adapt-nav-link {
+    margin-left: 2rem;
+    line-height: 2.1rem;
+  }
+}
+
 
 .header__menu-open {
   display: none;
@@ -121,6 +126,25 @@ body {
     font-size: 3rem;
   }
 }
+
+.header__adapt-nav {
+  display: none;
+  width: 80%;
+  margin: 0 auto;
+  justify-content: center;
+  overflow: hidden;
+  transition: 0.4s;
+}
+
+@media (max-width: 660px) {
+  .header__adapt-nav {
+    display: flex;
+    height: 0;
+  }
+}
+
+
+
 
 .intro {
   background-image: url('../img/Layer34.png');
@@ -150,8 +174,7 @@ body {
   align-items: center;
   text-align: center;  
   padding-top: 15rem;
-  
-}
+  }
 
 
 
@@ -196,8 +219,6 @@ body {
   transition: all 0.4s;
   color: #ffffff;
   text-transform: uppercase;
-  
-  
 }
 
 .intro__btn::before {
@@ -286,6 +307,9 @@ body {
 .project__item {
  width: 25%;
  height: 35rem;
+ background-size: cover;
+ background-position: center;
+ color: #ffffff;
  }
 
  @media (max-width: 605px) {
@@ -297,78 +321,64 @@ body {
 
 .project__item:first-child {
   background-image: url('../img/1.png');
-  background-size: cover;
-  background-position: center;
+  
 }
 
 .project__item:nth-child(2) {
   background-image: url('../img/2.png');
-  background-size: cover;
-  background-position: center;
+  
 }
 
 .project__item:nth-child(3) {
   background-image: url('../img/3.png');
-  background-size: cover;
-  background-position: center;
-  position: relative;
-  z-index: 0;
-  color: #ffffff;
   }
-
-.project__item:nth-child(3)::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(232, 69, 69, 0.9);
-  z-index: -1;
-}
 
 .project__item:nth-child(4) {
   background-image: url('../img/4.png');
-  background-size: cover;
-  background-position: center;
 }
 
 .project__item:nth-child(5) {
   background-image: url('../img/5.png');
-  background-size: cover;
-  background-position: center;
 }
 
 .project__item:nth-child(6) {
   background-image: url('../img/6.png');
-  background-size: cover;
-  background-position: center;
 }
 
 .project__item:nth-child(7) {
   background-image: url('../img/7.png');
-  background-size: cover;
-  background-position: center;
 }
 
 .project__item:nth-child(8) {
   background-image: url('../img/8.png');
-  background-size: cover;
-  background-position: center;
+}
+
+
+.project__item-about {
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(232, 69, 69, 0.8);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+}
+
+.project__item-about:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 .project__item-name {
   font-family: 'Raleway', sans-serif;
   font-size: 1.4rem;
   font-weight: bold;
-  text-align: center;
-  padding-top: 15.6rem;
 }
-
 .project__item-interface {
   font-family: 'Raleway', sans-serif;
   font-size: 1.4rem;
-  text-align: center;
   margin-top: 13px;
  }
 
@@ -460,44 +470,44 @@ body {
 .description__item-icon_facebook,
 .description__item-icon_twitter,
 .description__item-icon_linkedin {
-height: 4rem;
-width: 4rem;
-border: solid 1px #e8ecee;
-margin-right: 0.4rem;
-display: flex;
-justify-content: center;
-align-items: center;
+  height: 4rem;
+  width: 4rem;
+  border: solid 1px #e8ecee;
+  margin-right: 0.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slide {
-display: flex;
-width: 100%;
-flex-wrap: wrap;
+  display: flex;
+  width: 100%;
+  flex-wrap: wrap;
 }
 
 .slide__item {
-width: 50%;
-height: 50rem;
-background-color: red;
+  width: 50%;
+  height: 50rem;
+  background-color: red;
 }
 
 .slide__item:first-child {
-background-image: url('../img/girl.png');
-background-size: cover;
-background-position: center;
+  background-image: url('../img/girl.png');
+  background-size: cover;
+  background-position: center;
 }
 
 .slide__item:nth-child(2) {
-background-color: #53354a;
+  background-color: #53354a;
 }
 
 .slide__item-name {
-width: 70%;
-display: flex;
-flex-wrap: wrap;
-justify-content: start;
-margin-left: 7rem;
-margin-top: 8rem;
+  width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: start;
+  margin-left: 7rem;
+  margin-top: 8rem;
 }
 
 .slide__tittle {
@@ -521,14 +531,14 @@ margin-top: 8rem;
   }
 
   .download__inner {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   }
   
   .download__content {
-    text-align: center;
+  text-align: center;
   }
   
   .download__title {
@@ -634,17 +644,17 @@ margin-bottom: 9rem;
   display: flex;
   justify-content: center;
   margin-top: 2rem;
- }
+}
 
 .footer__item-icon_facebook,
 .footer__item-icon_twitter,
 .footer__item-icon_linkedin {
-height: 4rem;
-width: 4rem;
-border: solid 1px #e8ecee;
-margin-right: 0.4rem;
-display: flex;
-justify-content: center;
-align-items: center;
+  height: 4rem;
+  width: 4rem;
+  border: solid 1px #e8ecee;
+  margin-right: 0.4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
