--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 }
 
 html {
-  font-size: 6px;
+  font-size: 10px;
 }
 
 @media (min-width: 768px) {
@@ -45,7 +45,7 @@ body {
 
 @media (min-width: 992px) {
   .container {
-    width:980px;
+    width: 980px;
   }
 }
 
@@ -67,13 +67,13 @@ body {
   left: 0;
   width: 100%;
   z-index: 10;
-  }
+}
 
 .header__logo {
   height: 3rem;
-  }
+}
 
-.header__container { 
+.header__container {
   margin: 0 auto;
   width: 90%;
   display: flex;
@@ -109,7 +109,7 @@ body {
   border-radius: 3px;
 }
 
-@media (max-width: 660px) {
+@media (max-width: 760px) {
   .header__nav {
     display: none;
   }
@@ -150,7 +150,7 @@ body {
   position: relative;
   color: #fff;
   z-index: 0;
-  }
+}
 
 .intro::before {
   content: '';
@@ -159,7 +159,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color:rgba(43, 46, 74, 0.8);
+  background-color: rgba(43, 46, 74, 0.8);
   z-index: -1;
 }
 
@@ -169,8 +169,8 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;  
-  }
+  text-align: center;
+}
 
 .intro__title {
   font-family: 'Open Sans', sans-serif;
@@ -243,9 +243,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
- }
+}
 
- @media (max-width: 606px) {
+@media (max-width: 606px) {
   .info {
     justify-content: space-around;
   }
@@ -275,7 +275,7 @@ body {
 .info__item-image {
   margin-bottom: 3.4rem;
   display: inline-block;
- }
+}
 
 .project {
   width: 100%;
@@ -294,20 +294,20 @@ body {
 
 @media (max-width: 400px) {
   .project {
-  flex-direction: column;
-  align-items: center;
+    flex-direction: column;
+    align-items: center;
   }
 }
 
 .project__item {
- width: 25%;
- height: 35rem;
- background-size: cover;
- background-position: center;
- color: #ffffff;
- }
+  width: 25%;
+  height: 35rem;
+  background-size: cover;
+  background-position: center;
+  color: #ffffff;
+}
 
- @media (max-width: 605px) {
+@media (max-width: 605px) {
   .project__item {
     width: 280px;
     margin-bottom: 20px;
@@ -316,17 +316,17 @@ body {
 
 .project__item:first-child {
   background-image: url('../img/1.png');
-  
+
 }
 
 .project__item:nth-child(2) {
   background-image: url('../img/2.png');
-  
+
 }
 
 .project__item:nth-child(3) {
   background-image: url('../img/3.png');
-  }
+}
 
 .project__item:nth-child(4) {
   background-image: url('../img/4.png');
@@ -371,55 +371,65 @@ body {
   font-size: 1.4rem;
   font-weight: bold;
 }
+
 .project__item-interface {
   font-family: 'Raleway', sans-serif;
   font-size: 1.4rem;
   margin-top: 13px;
- }
+}
 
- .specialists {
-   text-align: center;
- }
+.specialists {
+  text-align: center;
+}
 
- .description {
+.description {
   width: 100%;
   margin: 10rem 0;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
- } 
+}
 
- @media (max-width: 606px) {
+@media (max-width: 606px) {
   .description {
     justify-content: space-around;
   }
 }
 
- .description__item {
+.description__item {
   width: 23.08%;
   text-align: left;
   font-family: 'Raleway';
- }
+}
 
- @media (max-width: 606px) {
+.description__item-foto {
+  transition: 0.5s;
+}
+
+.description__item-foto:hover {
+  transform: translate(-15px, 15px);
+  cursor: pointer;
+}
+
+@media (max-width: 606px) {
   .description__item {
     width: 180px;
     margin-bottom: 20px;
   }
 }
 
- .description__item-foto {
-   height: 27rem;
-   width: 100%;
- }
+.description__item-foto {
+  height: 27rem;
+  width: 100%;
+}
 
- .description__item-foto_ceo {
-   background-image: url('../img/Layer 30.png');
-   background-size: cover;
-   background-position: center;
- }
+.description__item-foto_ceo {
+  background-image: url('../img/Layer 30.png');
+  background-size: cover;
+  background-position: center;
+}
 
- .description__item-foto_developer {
+.description__item-foto_developer {
   background-image: url('../img/Layer 31.png');
   background-size: cover;
   background-position: center;
@@ -460,7 +470,7 @@ body {
 .description__item-icon {
   display: flex;
   justify-content: flex-start;
- }
+}
 
 .description__item-icon_facebook,
 .description__item-icon_twitter,
@@ -513,128 +523,128 @@ body {
   text-align: left;
   color: #ffffff;
   margin-bottom: 3rem;
-  }
+}
 
-  .slide__subtittle {
+.slide__subtittle {
   font-family: 'Raleway';
   font-size: 1.3rem;
   font-weight: bold;
   line-height: 1.62;
   color: #ffffff;
   text-transform: uppercase;
-  }
+}
 
-  .slide__dots {
-    display: flex;
-    justify-content: center;
-    margin-top: 30px;
-    
-  }
+.slide__dots {
+  display: flex;
+  justify-content: center;
+  margin-top: 30px;
 
-  .slider__dot {
-    width: 10px;
-    height: 10px;
-    margin: 0 10px;
-    cursor: pointer;
-    background-color: #ffffff;
-    border-radius: 50%;
-  }
+}
 
-  .slider__dot--isActive {
-    border: 2px solid red;
-  }
+.slider__dot {
+  width: 10px;
+  height: 10px;
+  margin: 0 10px;
+  cursor: pointer;
+  background-color: #ffffff;
+  border-radius: 50%;
+}
 
-  .download__inner {
+.slider__dot--isActive {
+  border: 2px solid red;
+}
+
+.download__inner {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  }
-  
-  .download__content {
+}
+
+.download__content {
   text-align: center;
-  }
-  
-  .download__title {
-   font-family: 'Raleway';
-    font-size: 2.8rem;
-    font-weight: 300;
-    line-height: 0.75;
-    letter-spacing: normal;
-    color: #2d3033;
-    margin-top: 10rem;
-  }
-  
-  .download__subtitle {  
-    font-family: 'Raleway';
-    font-size: 1.3rem;
-    font-weight: bold;
-    line-height: 1.62;
-    margin-top: 1.6rem;
-    text-transform: uppercase;
-    color: #2d3033;
-  }
-  
-  .download__btn {
-    width: 28rem;
-    height: 4.6rem;
-    border-radius: 2px;
-    background-color: #e84545;
-    border: none;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Raleway', sans-serif;
-    font-size: 1.3rem;
-    font-weight: 600;
-    line-height: 1.62;
-    outline: none;
-    cursor: pointer;
-    position: relative;
-    z-index: 0;
-    overflow: hidden;
-    transition: all 0.4s;
-    color: #ffffff;
-    text-transform: uppercase;
-    margin-top: 4rem;
-    margin-bottom: 10rem;
-  }
-  
-  .download__btn::before {
-    content: '';
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    height: 0;
-    background-color: #3a3e64;
-    z-index: -1;
-    transition: all .4s;
-  }
-  
-  .download__btn:hover {
-    color: #e7434e;
-  }
-  
-  .download__btn:hover::before {
-    top: 0;
-    height: 100%;
-  }
+}
 
-  .footer__content {
-    display: flex;
-    flex-wrap: wrap;
-   } 
-  
-   .footer {
-    background-color: #3a3e64;
-   }
+.download__title {
+  font-family: 'Raleway';
+  font-size: 2.8rem;
+  font-weight: 300;
+  line-height: 0.75;
+  letter-spacing: normal;
+  color: #2d3033;
+  margin-top: 10rem;
+}
 
-   .footer__item {
-    width: 33.33%;
-    text-align: center;
-    font-family: 'Raleway';
-  }
+.download__subtitle {
+  font-family: 'Raleway';
+  font-size: 1.3rem;
+  font-weight: bold;
+  line-height: 1.62;
+  margin-top: 1.6rem;
+  text-transform: uppercase;
+  color: #2d3033;
+}
+
+.download__btn {
+  width: 28rem;
+  height: 4.6rem;
+  border-radius: 2px;
+  background-color: #e84545;
+  border: none;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 1.3rem;
+  font-weight: 600;
+  line-height: 1.62;
+  outline: none;
+  cursor: pointer;
+  position: relative;
+  z-index: 0;
+  overflow: hidden;
+  transition: all 0.4s;
+  color: #ffffff;
+  text-transform: uppercase;
+  margin-top: 4rem;
+  margin-bottom: 10rem;
+}
+
+.download__btn::before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 0;
+  background-color: #3a3e64;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.download__btn:hover {
+  color: #e7434e;
+}
+
+.download__btn:hover::before {
+  top: 0;
+  height: 100%;
+}
+
+.footer__content {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer {
+  background-color: #3a3e64;
+}
+
+.footer__item {
+  width: 33.33%;
+  text-align: center;
+  font-family: 'Raleway';
+}
 
 .footer__item-title {
   font-family: 'Raleway';
@@ -645,12 +655,12 @@ body {
 }
 
 .footer__item-subtitle {
-font-family: 'Raleway';
-font-size: 1.4rem;
-line-height: 1.61;
-color: rgba(255, 255, 255, 0.5);
-margin-top: 2rem;
-margin-bottom: 9rem;
+  font-family: 'Raleway';
+  font-size: 1.4rem;
+  line-height: 1.61;
+  color: rgba(255, 255, 255, 0.5);
+  margin-top: 2rem;
+  margin-bottom: 9rem;
 }
 
 .footer__item-icon {
@@ -670,4 +680,3 @@ margin-bottom: 9rem;
   justify-content: center;
   align-items: center;
 }
-
