--- a/css/main.css
+++ b/css/main.css
@@ -101,7 +101,6 @@ body {
   }
 }
 
-
 .header__menu-open {
   display: none;
   background: rgba(168, 163, 163, 0.8);
@@ -144,7 +143,7 @@ body {
 }
 
 .intro {
-  background-image: url('../img/Layer34.png');
+  background-image: url('../img/intro.png');
   background-size: cover;
   background-position: center;
   position: relative;
@@ -291,7 +290,6 @@ body {
   }
 }
 
-
 @media (max-width: 400px) {
   .project {
     flex-direction: column;
@@ -315,39 +313,36 @@ body {
 }
 
 .project__item:first-child {
-  background-image: url('../img/1.png');
-
+  background-image: url('../img/project_1.png');
 }
 
 .project__item:nth-child(2) {
-  background-image: url('../img/2.png');
-
+  background-image: url('../img/project_2.png');
 }
 
 .project__item:nth-child(3) {
-  background-image: url('../img/3.png');
+  background-image: url('../img/project_3.png');
 }
 
 .project__item:nth-child(4) {
-  background-image: url('../img/4.png');
+  background-image: url('../img/project_4.png');
 }
 
 .project__item:nth-child(5) {
-  background-image: url('../img/5.png');
+  background-image: url('../img/project_5.png');
 }
 
 .project__item:nth-child(6) {
-  background-image: url('../img/6.png');
+  background-image: url('../img/project_6.png');
 }
 
 .project__item:nth-child(7) {
-  background-image: url('../img/7.png');
+  background-image: url('../img/project_7.png');
 }
 
 .project__item:nth-child(8) {
-  background-image: url('../img/8.png');
+  background-image: url('../img/project_8.png');
 }
-
 
 .project__item-about {
   opacity: 0;
@@ -424,25 +419,25 @@ body {
 }
 
 .description__item-foto_ceo {
-  background-image: url('../img/Layer 30.png');
+  background-image: url('../img/ceo.png');
   background-size: cover;
   background-position: center;
 }
 
 .description__item-foto_developer {
-  background-image: url('../img/Layer 31.png');
+  background-image: url('../img/developer.png');
   background-size: cover;
   background-position: center;
 }
 
 .description__item-foto_designer {
-  background-image: url('../img/Layer 32.png');
+  background-image: url('../img/designer.png');
   background-size: cover;
   background-position: center;
 }
 
 .description__item-foto_scientist {
-  background-image: url('../img/Layer 33.png');
+  background-image: url('../img/scientist.png');
   background-size: cover;
   background-position: center;
 }
@@ -497,7 +492,6 @@ body {
 }
 
 .slide__foto {
-
   background-size: cover;
   background-position: center;
 }
@@ -538,7 +532,6 @@ body {
   display: flex;
   justify-content: center;
   margin-top: 30px;
-
 }
 
 .slider__dot {
